fix(improvement-115): IntelliJ inspection cleanup, NPE guard, dead-code removal; fix lightbox YouTube close-button bug
Full triage of a project-wide IntelliJ IDEA inspection export, in 4 ordered sub-passes:

- Batch 1 (mechanical): unused imports, SequencedCollectionMethodCanBeUsed (.get(0)->getFirst()),
  diamond/method-ref, dangling Javadoc, FieldCanBeLocal, redundant suppression, HashSet
  simplification, dead i18n property, ClassCanBeRecord.
- Batch 2 (bugs): fixed a real NPE gap in AdvertisementSaveService.save()'s update path on a
  concurrent soft-delete race (added a guard + regression test, matching the sibling delete()
  method's existing pattern); migrated deprecated Testcontainers PostgreSQLContainer to the new
  non-generic class; setAcceptedFileTypes -> setAcceptedMimeTypes; fixed an unrelated pre-existing
  build break in integration-tests/pom.xml (junit-jupiter-api resolved to runtime scope, invisible
  to src/main compilation).
- Batch 3: added missing @NonNull/@jspecify.NonNull across 20 real gaps.
- Batch 4 (largest): removed ~40 confirmed-dead methods/fields while excluding known false
  positives (CrudRepository "not implemented", ArchUnit fields, @PostConstruct/@ClientCallable
  methods); simplified SPI methods with provably-dead parameters end-to-end (AuditPort.captureUpdate,
  AuditActivityEnrichHook, AuditDomainHook.resolveDisplayName); removed UserPort.restoreToSnapshot()
  and AttachmentPort.getMediaSummary(EntityRef) (zero real callers); collapsed
  AbstractViewOverlayModeHandler's dead secondary/tertiary-tab machinery, leftover from the
  Timeline-tab extraction.

The Vaadin @Theme deprecation was carved out into improvement-116 (deferred, needs a full visual
regression pass).

Also fixes a separate, pre-existing bug found during manual verification: AttachmentLightbox's
close button did nothing for YouTube/embedded clips because iframe.setSrc("about:blank") throws
IllegalArgumentException under a newer Vaadin's safe-URL-scheme check, si